[package]
name = "nostr-ppg"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ppg"
path = "ppg.rs"

[dependencies]
futures = "0.3.30"
nostr-database = "0.29.0"
nostr-rocksdb = "0.29.0"
nostr-sdk = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.197"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
